Flex Exercise 05 HTML - Add container to separate icon from other content      - nest close button inside Header div (rather than creating another container with two divs) CSS - Make model flex, padding to create edge space and gap to create equal space between icon and content     - set flex-shrink for icon to 0 to stop it being crushed     - Make header flex, align centre (vert, and justify space between, font bold/larger, margin bottom for space to text)     - Add text margin-bottom for space to buttons below.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
 }
 
 .icon {
@@ -29,10 +32,24 @@ body {
   background: lavender;
   width: 42px;
   height: 42px;
-  border-radius: 50%;
+  border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 12px;
 }
 
 .close-button {
